# Fcharts

./: LICENSE  README.md
Fcharts/: LICENSE  Makefile  README.md  pyproject.toml
Fcharts/1.0/: __init__.py  dataset.py  features.py  plots.py
Fcharts/1.0/modeling/: predict.py  train.py
Fcharts/docs/: mkdocs.yml
Fcharts/docs/docs/: index.md
